--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ font-family: 'Work Sans', sans-serif;
 body {
     width: 100%;
     background-color: var(--body-bg-color);
+    position: relative;
 }
 
 /*FORMATAÇÃO LOGO*/
@@ -31,6 +32,7 @@ header{
     margin-top: 50px;
     margin-bottom: 92px;
     margin-left: 30px;
+    position: relative;
 }
 #logo img{
     width: 389px;
@@ -42,6 +44,7 @@ header{
     width: 647px;
     height: 102px;
     margin-left: 36px;
+    position: relative;
 }
 #content h2{
     margin-bottom: 8.56px;
@@ -74,6 +77,7 @@ header{
     font-family: 'League Spartan', sans-serif;
     font-size: 14px;
     color: var(--form-color);
+    position: relative;
 }
 #form label{
     margin-left: 36px;
@@ -125,6 +129,7 @@ button img{
     font-size: 14px;
     font-weight: bold;
     color: var(--bg-button-color);
+    position: relative;
 }
 #link a:hover{
     cursor: pointer;
@@ -143,4 +148,10 @@ button img{
 }
 
 /*FORMATAÇÃO IMAGEM*/
-
+aside img{
+    width: 1175px;
+    height: 784px;
+    float: right;
+    margin-top: -521px;
+    
+}
