Finalização do projeto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ font-family: 'Work Sans', sans-serif;
 }
 
 /*FORMATAÇÕES GERAIS*/
-body {
+body{
     width: 100%;
     background-color: var(--body-bg-color);
     position: relative;
@@ -61,6 +61,10 @@ header{
     color: var(--text-color);
 }
 #content p{
+    width: 647px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
     font-family: 'League Spartan', sans-serif;  
     font-size: 14px;
     font-weight: normal;
@@ -114,11 +118,13 @@ button{
     margin-right: 777px;
     background-color: var(--bg-button-color);
     border: none;
+    cursor: pointer;
 }
 button img{
     width: 24px;
     height: 24px;
     display: inline;
+    cursor: pointer;
 }
 
 /*FORMATAÇÃO LINK*/
@@ -148,10 +154,14 @@ button img{
 }
 
 /*FORMATAÇÃO IMAGEM*/
-aside img{
-    width: 1175px;
-    height: 784px;
+aside {
+    width: 755px;
+    height: 671.6px;
+    background-image: url(/assets/img/read_news.jpg);
+    background-size: 755px 671.6px;
+    background-repeat: no-repeat;
     float: right;
-    margin-top: -521px;
-    
+    margin-top: -521px;  
+    position: inherit;
 }
+
